fixed footer overflowing issue

--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ footer{display: flex;
 .components h1,p{display:block;
                  text-align:start; 
                  line-height: 25px;
-                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                  
                 font-size: 90%;
 
